--- a/public/css/extra.css
+++ b/public/css/extra.css
@@ -3,3 +3,47 @@
     padding: 5%;
     border-radius: 10px;
 }
+
+.customIcon{
+    color: rgba(0,0,0,0);
+    border-radius: 50%;
+}
+
+#teamJatayu{
+    background: url("../img/clients/logo_teamJatayu.jpg");
+    background-size: cover;
+}
+#zennia{
+    background: url("../img/clients/logo_zennia.jpg");
+    background-size: 85% 85%;
+    background-color: #ffffff;
+    background-position: 50%;
+    background-repeat: no-repeat;
+
+}
+#dcac{
+    background: url("../img/clients/logo_leher.jpg");
+    background-size: cover;
+}
+#bestech{
+    background: url("../img/clients/logo_bestech.jpg");
+    background-size: 100%;
+    background-color: #ffffff;
+    background-position: 50%;
+    background-repeat: no-repeat;
+}
+#ju{
+    background: url("../img/clients/logo_ju.jpeg");
+    background-size: contain;
+}
+
+
+.carousel-item {
+    width: 100vw;
+    min-height: 56.25vw;
+    background: no-repeat center center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+}
