--- a/views/index.html
+++ b/views/index.html
@@ -12,8 +12,9 @@
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="author" content="DipHigh Corp.">
+    <meta name="description" content="We design events to create opportunities that create interactions.">
+    <meta name="keywords" content="Event Management , Events , Organise , EMS , Ezilone , ezilone.com">
 
     <title>EMS</title>
     <link rel="icon" href="img/titleLogo.png">
@@ -57,6 +58,9 @@
               <a class="nav-link js-scroll-trigger" href="#portfolio">Gallery</a>
             </li>
             <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#clients">Clients</a>
+            </li>
+            <li class="nav-item">
               <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
             </li>
           </ul>
@@ -87,7 +91,7 @@
           <div class="col-lg-8 mx-auto text-center">
             <h2 class="section-heading text-white">We've got what you need!</h2>
             <hr class="light my-4">
-            <p class="text-faded mb-4">We are a team of engineers, entrepreneurs, marketeers . We design events to create opportunities that create intrections. 
+            <p class="text-faded mb-4">We are a team of engineers, entrepreneurs, marketeers . We design events to create opportunities that create interactions.
 We believe there is a better way to do Marketing as entertaining and stress-free as possible and at the same time make it informative to help enlighten the general audience about the desired goal of the event resulting in maximum profitability.
 </p>
             <a class="btn btn-light btn-xl js-scroll-trigger" href="#services">Get Started!</a>
@@ -111,161 +115,182 @@ We believe there is a better way to do Marketing as entertaining and stress-free
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-business-time text-primary mb-3 sr-icon-1"></i>
               <h3 class="mb-3">Corporate events </h3>
-              <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>
+              <!--<p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>-->
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-home text-primary mb-3 sr-icon-2"></i>
               <h3 class="mb-3">Social events </h3>
-              <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>
+              <!--<p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>-->
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-share-square text-primary mb-3 sr-icon-3"></i>
               <h3 class="mb-3">Promotional events</h3>
-              <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>
+              <!--<p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>-->
             </div>
           </div>
           <div class="col-lg-3 col-md-6 text-center">
             <div class="service-box mt-5 mx-auto">
               <i class="fas fa-4x fa-road text-primary mb-3 sr-icon-4"></i>
               <h3 class="mb-3">Road shows</h3>
-              <p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>
+              <!--<p class="text-muted mb-0">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Haec et tu ita posuisti, et verba vestra sunt.</p>-->
             </div>
           </div>
         </div>
       </div>
     </section>
 
-    <section class="p-0" id="portfolio">
-      <div class="container-fluid p-0">
-        <div class="row no-gutters popup-gallery">
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/1.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/1.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
+
+
+
+
+
+    <section id="portfolio" class="p-0">
+      <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
+          <li data-target="#carouselExampleIndicators" data-slide-to="5"></li>
+        </ol>
+
+        <div class="carousel-inner" role="listbox">
+          <!-- Slide One - Set the background image for this slide in the line below -->
+          <div class="carousel-item active" style="background-image: url('img/portfolio/fullsize/1.jpg')">
+            <!--<div class="carousel-caption d-none d-md-block">-->
+              <!--<h3>First Slide</h3>-->
+              <!--<p>This is a description for the first slide.</p>-->
+            <!--</div>-->
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/2.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/2.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
+          <!-- Slide Two - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('img/portfolio/fullsize/2.jpg')">
+            <!--<div class="carousel-caption d-none d-md-block">-->
+              <!--<h3>Second Slide</h3>-->
+              <!--<p>This is a description for the second slide.</p>-->
+            <!--</div>-->
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/3.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/3.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
+          <!-- Slide Three - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('img/portfolio/fullsize/3.jpg')">
+            <!--<div class="carousel-caption d-none d-md-block">-->
+              <!--<h3>Third Slide</h3>-->
+              <!--<p>This is a description for the third slide.</p>-->
+            <!--</div>-->
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/4.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/4.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
+          <!-- Slide Four - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('img/portfolio/fullsize/4.jpg')">
+            <!--<div class="carousel-caption d-none d-md-block">-->
+              <!--<h3>Fourth Slide</h3>-->
+              <!--<p>This is a description for the fourth slide.</p>-->
+            <!--</div>-->
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/5.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/5.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
+          <!-- Slide Five - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('img/portfolio/fullsize/5.jpg')">
+            <!--<div class="carousel-caption d-none d-md-block">-->
+              <!--<h3>Fifth Slide</h3>-->
+              <!--<p>This is a description for the fifth slide.</p>-->
+            <!--</div>-->
           </div>
-          <div class="col-lg-4 col-sm-6">
-            <a class="portfolio-box" href="img/portfolio/fullsize/6.jpg">
-              <img class="img-fluid" src="img/portfolio/thumbnails/6.jpg" alt="">
-              <div class="portfolio-box-caption">
-                <div class="portfolio-box-caption-content">
-                  <div class="project-category text-faded">
-                    Category
-                  </div>
-                  <div class="project-name">
-                    Project Name
-                  </div>
-                </div>
-              </div>
-            </a>
+          <!-- Slide Six - Set the background image for this slide in the line below -->
+          <div class="carousel-item" style="background-image: url('img/portfolio/fullsize/6.jpg')">
+            <!--<div class="carousel-caption d-none d-md-block">-->
+              <!--<h3>Sixth Slide</h3>-->
+              <!--<p>This is a description for the sixth slide.</p>-->
+            <!--</div>-->
+          </div>
+        </div>
+
+        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </a>
+        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </a>
+
+      </div>
+    </section>
+
+
+
+
+
+
+
+    <section id="clients" class="bg-dark text-white">
+      <div class="container text-center">
+        <h2 class="mb-4">Our Clients</h2>
+        <hr class="my-4">
+        <div class="row">
+          <div class="col-lg-3 mr-auto text-center">
+            <!--<a target="_blank" href="">-->
+            <i class="customIcon fas fa-phone fa-6x mt-5 sr-icon-3" id="zennia"></i>
+            <h5 class="mt-3">Zennia</h5>
+            <!--</a>-->
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <!--<a target="_blank" href="">-->
+            <i class="customIcon fas fa-phone fa-6x mt-5 sr-icon-2" id="dcac"></i>
+            <h5 class="mt-3">DCAC, Delhi University</h5>
+            <!--</a>-->
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <!--<a target="_blank" href="">-->
+              <i class="customIcon fas fa-phone fa-6x mt-5 sr-icon-1" id="teamJatayu"></i>
+              <h5 class="mt-3">Team Jatayu, M.A.I.T</h5>
+            <!--</a>-->
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <!--<a target="_blank" href="">-->
+              <i class="customIcon fas fa-phone fa-6x mt-5 sr-icon-1" id="bestech"></i>
+              <h5 class="mt-3">Bestech (Park view city)</h5>
+            <!--</a>-->
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <!--<a target="_blank" href="">-->
+              <i class="customIcon fas fa-phone fa-6x mt-5 sr-icon-3" id="ju"></i>
+              <h5 class="mt-3">JU Agri</h5>
+            <!--</a>-->
           </div>
         </div>
       </div>
     </section>
 
-    <!--<section class="bg-dark text-white">-->
-      <!--<div class="container text-center">-->
-        <!--<h2 class="mb-4">Free Download at Start Bootstrap!</h2>-->
-        <!--<a class="btn btn-light btn-xl sr-button" href="http://startbootstrap.com/template-overviews/creative/">Download Now!</a>-->
-      <!--</div>-->
-    <!--</section>-->
 
     <section>
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto ">
-            <h2>Feedback Form</h2>
+            <h2>Enquiry Form</h2>
             <div class="clearfix"></div>
-            <form id="feedbackForm" class="form-horizontal" method="POST" action="send">
+            <form id="feedbackForm" class="form-horizontal" action="">
               <div class="form-group">
                 <label class="control-label col-sm-2" for="name">Name:</label>
                 <div class="col-sm-10">
-                  <input type="text" class="form-control" id="name" placeholder="Enter your name" name="Name">
+                  <input type="text" name="name" class="form-control" id="name" placeholder="Enter your name">
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Email:</label>
                 <div class="col-sm-10">
-                  <input type="email" class="form-control" id="email" placeholder="Enter email" name="Email">
+                  <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
+                </div>
+              </div>
+              <div class="form-group">
+                <label class="control-label col-sm-2" for="email">Phone:</label>
+                <div class="col-sm-10">
+                  <input type="text" name="phone" class="form-control" id="phone" placeholder="Enter Phone number">
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="msg">Message:</label>
                 <div class="col-sm-10">
-                  <textarea  rows="5" class="form-control" id="msg" placeholder="Enter your message here.." name="Message"></textarea>
+                  <textarea  rows="5" name="message" class="form-control" id="msg" placeholder="Enter your message here.."></textarea>
                 </div>
               </div>
               <div class="form-group">
@@ -288,16 +313,47 @@ We believe there is a better way to do Marketing as entertaining and stress-free
             <p class="mb-5">Ready to start your next project with us? That's great! Give us a call or send us an email and we will get back to you as soon as possible!</p>
           </div>
         </div>
+        <div class="text-center">
+          <p class="small">
+            <a target="_blank" href="https://dipdlavsingh.github.io">Like our website?</a>
+          </p>
+        </div>
         <div class="row">
           <div class="col-lg-4 ml-auto text-center">
             <i class="fas fa-phone fa-3x mb-3 sr-contact-1"></i>
-            <p>8130207781</p>
+            <p>87429-95629<br>81302-07781</p>
           </div>
           <div class="col-lg-4 mr-auto text-center">
-            <i class="fas fa-envelope fa-3x mb-3 sr-contact-2"></i>
+            <i class="fas fa-home fa-3x mb-3 sr-contact-2"></i>
             <p>
-              <a href="#">#1451/17 mg road gurgaon </a>
+              <a target="_blank" href="https://goo.gl/maps/f71RKbLmcY72">#1567/17 mg road gurgaon </a>
             </p>
+          </div>
+        </div>
+        <div class="text-center mt-5">
+          <h2 class="section-heading">Keep Up To Date</h2>
+          <hr class="my-4">
+        </div>
+        <div class="row mt-4 text-center">
+          <div class="col-lg-3 ml-auto text-center">
+            <a target="_blank" href="https://www.instagram.com/ezilone_marketing_solutions/">
+              <i class="fab fa-instagram fa-3x mb-3 sr-contact-1"></i>
+            </a>
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <a target="_blank" href="https://m.facebook.com/EMS-313306552608962/">
+              <i class="fab fa-facebook fa-3x mb-3 sr-contact-2"></i>
+            </a>
+          </div>
+          <div class="col-lg-3 ml-auto text-center">
+            <a target="_blank" href="https://www.youtube.com/channel/UCfqtND7S7E-q_pynykiaygw">
+              <i class="fab fa-youtube fa-3x mb-3 sr-contact-1"></i>
+            </a>
+          </div>
+          <div class="col-lg-3 mr-auto text-center">
+            <a target="_blank" href="https://www.linkedin.com/in/ezilone-marketing-solutions-3b8a66171">
+              <i class="fab fa-linkedin fa-3x mb-3 sr-contact-2"></i>
+            </a>
           </div>
         </div>
       </div>
