--- a/views/index.html
+++ b/views/index.html
@@ -268,29 +268,29 @@ We believe there is a better way to do Marketing as entertaining and stress-free
           <div class="col-lg-8 mx-auto ">
             <h2>Enquiry Form</h2>
             <div class="clearfix"></div>
-            <form id="feedbackForm" class="form-horizontal" action="">
+            <form id="feedbackForm" method="POST" action="send" class="form-horizontal" action="">
               <div class="form-group">
                 <label class="control-label col-sm-2" for="name">Name:</label>
                 <div class="col-sm-10">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Enter your name">
+                  <input type="text" name="name" class="form-control" id="name" name="Name" placeholder="Enter your name">
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Email:</label>
                 <div class="col-sm-10">
-                  <input type="email" name="email" class="form-control" id="email" placeholder="Enter email">
+                  <input type="email" name="email" class="form-control" id="email" name="Email" placeholder="Enter email">
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="email">Phone:</label>
                 <div class="col-sm-10">
-                  <input type="text" name="phone" class="form-control" id="phone" placeholder="Enter Phone number">
+                  <input type="text" name="phone" class="form-control" id="phone" name="Phone" placeholder="Enter Phone number">
                 </div>
               </div>
               <div class="form-group">
                 <label class="control-label col-sm-2" for="msg">Message:</label>
                 <div class="col-sm-10">
-                  <textarea  rows="5" name="message" class="form-control" id="msg" placeholder="Enter your message here.."></textarea>
+                  <textarea  rows="5" name="message" class="form-control" id="msg" name="Message" placeholder="Enter your message here.."></textarea>
                 </div>
               </div>
               <div class="form-group">
