--- a/views/index.html
+++ b/views/index.html
@@ -266,6 +266,7 @@ We believe there is a better way to do Marketing as entertaining and stress-free
       <div class="container">
         <div class="row">
           <div class="col-lg-8 mx-auto ">
+          <!-- Enquiry Form -->
             <h2>Enquiry Form</h2>
             <div class="clearfix"></div>
             <form id="feedbackForm" method="POST" action="send" class="form-horizontal" action="">
