--- a/views/index.html
+++ b/views/index.html
@@ -14,7 +14,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="author" content="DipHigh Corp.">
     <meta name="description" content="We design events to create opportunities that create interactions.">
-    <meta name="keywords" content="Event Management , Events , Organise , EMS , Ezilone , ezilone.com">
+    <meta name="keywords" content="Event Management , Events , Organise , EMS , Ezilone , ezilone.com ,Corporate, corporate event, planning, marketing, eventing, social event, engineers, entrepreneurs">
 
     <title>EMS</title>
     <link rel="icon" href="img/titleLogo.png">
